--- a/download.html
+++ b/download.html
@@ -554,8 +554,7 @@
 
        
                  <center>   <img
-                            src="https://chart.googleapis.com/chart?chs=140x140&cht=qr&chl=
-            http%3A%2F%2Ffiles.appsgeyser.com%2FDz6a%2520%25D1%2582%25D1%2584%25D1%2582%25D0%25BB_14818100.apk"
-                            title="Download Dz6a тфтл_14818100, Android App built using AppsGeyser, Free "
+                            src="qrdown.jpg"
+    
                             alt=" - "/>
                             </center>
