--- a/download.html
+++ b/download.html
@@ -555,6 +555,6 @@
        
                  <center>   <img
                             src="qrdown.jpg"
-    
+                            title="Download Dz6a тфтл_14818100, Android App built using AppsGeyser, Free "
                             alt=" - "/>
                             </center>
