--- a/download.html
+++ b/download.html
@@ -553,8 +553,6 @@
          <a href="https://dz6a.netlify.app/Dz6a.apk">  <div class="mainText">Загрузить</div>
 
        
-                 <center>   <img
-                            src="qrdown.jpg"
-                            title="Download Dz6a тфтл_14818100, Android App built using AppsGeyser, Free "
-                            alt=" - "/>
-                            </center>
+                 <center> 
+<img stc="qrdown.jpg"> 
+                   </center>
