--- a/download.html
+++ b/download.html
@@ -536,7 +536,7 @@
         <table width="100%" cellpadding="5" cellspacing="0">
             <tr>
                 <td id="installId"><div style="padding-top: 15px" class="appStat appInstall">
-                        Установок: 0+                    </div>
+                        Установок: 3                    </div>
                 </td>
                 <td id="nameId"><div class="appName">
                         Dz6a тфтл                    </div>
