--- a/Главная.html
+++ b/Главная.html
@@ -76,7 +76,7 @@
   <br>
   <br>
   <center>
-  	<h5><a href="#" class="nb">Блог Класса</a></h5>
+  	<h5><a href="#" class="nb">Перейти в блог класса</a></h5>
      <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
 </center>
   
