--- a/29 ноября.html
+++ b/29 ноября.html
@@ -71,6 +71,10 @@
      <center>
 	 <h3>Математика</h3>
   <h4>392-419 зел. </h4>
+    <h3>Литература</h3>
+  <h4>Выразительное чтение стихотворений Ф.И. Тютчева.</h4>
+      <h3>География</h3>
+  <h4>параграф 41, р.т. стр.29-31 №2-9</h4>
    
 
 
