--- a/download.html
+++ b/download.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE lang="ru" >
+<html>
 <head>
-    <base href="https://appsgeyser.com">
-    <meta name="description" content="" />
-<meta name="keywords" content="" />
+
+    <meta name="description" content="скачать приложенте Dz6a тфтл" />
+<meta name="keywords" content="Dz6a, скачать, приложение, ТФТЛ" />
 <link rel="stylesheet" type="text/css" href="//appsgeyser.io/assets/9c131307/css/apps-style.css" media="all" />
 <title>Dz6a тфтл Android </title>
 
@@ -18,8 +18,8 @@
     <meta name="geo.placename" content="Alexandria"/>
     <meta name="geo.position" content="38.799972;-77.05069"/>
     <meta name="ICBM" content="38.799972, -77.05069"/>
-    <meta name="description" content="Download and install Dz6a тфтл app for Android device for free. Powered by AppsGeyser - App Builder"/>
-    <meta name="title" content="Android App: Dz6a тфтл"/>
+    <meta name="description" content="Загрузить мобильное приложение Dz6a тфтл"/>
+    <meta name="title" content="Android приложение: Dz6a тфтл"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
             <meta name="robots" content="index follow">
@@ -29,8 +29,8 @@
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=m2l9PBkm4l">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=m2l9PBkm4l">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=m2l9PBkm4l">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="images/logo.jpg">
+    <link rel="icon" type="image/jpg" sizes="16x16" href="images/logo.jpg">
     <link rel="manifest" href="/site.webmanifest?v=m2l9PBkm4l">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v=m2l9PBkm4l" color="#5bbad5">
     <link rel="shortcut icon" href="/favicon.ico?v=m2l9PBkm4l">
