--- a/29 ноября.html
+++ b/29 ноября.html
@@ -75,7 +75,8 @@
   <h4>Выразительное чтение стихотворений Ф.И. Тютчева.</h4>
       <h3>География</h3>
   <h4>параграф 41, р.т. стр.29-31 №2-9</h4>
-   
+    <h3>Физика</h3>
+  <h4></h4>
 
 
    
@@ -83,7 +84,7 @@
 
    
 	 
-	 
+	 </center>
       </div>
     </section>
     <section class="u-clearfix u-gradient u-section-2" id="sec-8383">
