--- a/30 ноября.html
+++ b/30 ноября.html
@@ -71,7 +71,7 @@
      <center>
 	 <h3>Математика</h3>
   <h4></h4>
-    <h3>Английский </h3>
+    <h3>Английский 1 группа</h3>
   <h4></h4>
       <h3>Русский</h3>
   <h4></h4>
