--- a/30 ноября.html
+++ b/30 ноября.html
@@ -70,7 +70,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
      <center>
 	 <h3>Математика</h3>
-  <h4></h4>
+  <h4>13 п. конспект, правила, 424,432,433</h4>
     <h3>Английский 1 группа</h3>
   <h4></h4>
       <h3>Русский</h3>
