--- a/gdz.html
+++ b/gdz.html
@@ -72,9 +72,10 @@
 
 <center>
 	
-   <h4></h4>
-<img src=".jpg">
-	<img src=".jpg">
+   <h4>Математика 30 ноября </h4>
+<img src="30матем1.jpg">
+	<img src="30матем2.jpg">
+		<img src="30матем3.jpg">
 <h4></h4>
 <img src=".jpg">
 	<img src=".jpg">
