--- a/gdz.html
+++ b/gdz.html
@@ -73,7 +73,7 @@
 <center>
 	
    <h4>Математика 30 ноября </h4>
-<img src="30матем1.jpg">
+<img src="30матем1.jpg" style=width: 50%;  style=height: 50%>
 	<img src="30матем2.jpg">
 		<img src="30матем3.jpg">
 <h4></h4>
