--- a/gdz.html
+++ b/gdz.html
@@ -73,9 +73,9 @@
 <center>
 	
    <h4>Математика 30 ноября </h4>
-<img src="30матем1.jpg" style=width: 50%;  style=height: 50%>
-	<img src="30матем2.jpg">
-		<img src="30матем3.jpg">
+<img src="30матем1.jpg" width="340" >
+	<img src="30матем2.jpg" width="340" >
+		<img src="30матем3.jpg" width="340" >
 <h4></h4>
 <img src=".jpg">
 	<img src=".jpg">
