--- a/gdz.html
+++ b/gdz.html
@@ -68,14 +68,17 @@
       </div></header>
     <section class="u-clearfix u-gradient u-section-1" id="sec-db88">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-
-
+<style>
+img {
+width="340";
+} 
+</style>
 <center>
 	
    <h4>Математика 30 ноября </h4>
-<img src="30матем1.jpg" width="340" >
-	<img src="30матем2.jpg" width="340" >
-		<img src="30матем3.jpg" width="340" >
+<img src="30матем1.jpg"  >
+	<img src="30матем2.jpg">
+		<img src="30матем3.jpg" >
 <h4></h4>
 <img src=".jpg">
 	<img src=".jpg">
