--- a/gdz.html
+++ b/gdz.html
@@ -70,7 +70,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
 <style>
 img {
-width:"340";
+width: 340px;
 } 
 </style>
 <center>
