--- a/gdz.html
+++ b/gdz.html
@@ -79,9 +79,9 @@ width: 340px;
 <img src="30матем1.jpg"  >
 	<img src="30матем2.jpg">
 		<img src="30матем3.jpg" >
-<h4></h4>
-<img src=".jpg">
-	<img src=".jpg">
+<h4>Русский 30 ноября</h4>
+<img src="30рус1.jpg">
+	
      <h4></h4>
 <img src=".jpg">
 	<img src=".jpg">
