--- a/gdz.html
+++ b/gdz.html
@@ -82,7 +82,7 @@ width: 340px;
 <h4>Русский 30 ноября</h4>
 <img src="30рус1.jpg">
 	
-     <h4></h4>
+    <h4>Английский 1 гр. 30 ноября</h4>
 <img src=".jpg">
 	<img src=".jpg">
 <h4></h4>
