--- a/gdz.html
+++ b/gdz.html
@@ -83,8 +83,8 @@ width: 340px;
 <img src="30рус1.jpg">
 	
     <h4>Английский 1 гр. 30 ноября</h4>
-<img src=".jpg">
-	<img src=".jpg">
+<img src="англ301.jpg">
+	<img src="англ302.jpg">
 <h4></h4>
 <img src=".jpg">
 	<img src=".jpg">
