--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<br>
 	<br>
 	<center>
-		  	<h5><a href="#" class="nb">Перейти в блог класса</a></h5>
+		  	<h5><a href="#" class="nb" class="collectonme">Перейти в блог класса</a></h5>
      <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
 </center>
         <h3 class="u-align-center nb ">Отзывы </h3>
