--- a/index.html
+++ b/index.html
@@ -100,20 +100,10 @@
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
 	  
-<script src="/snow/snowstorm-min.js"></script>
-
-<script>
-
-	window.onload = function() {
-
-		snowStorm.snowColor = "#fff"; // Цвет снежинок
-		snowStorm.flakesMaxActive = 100; // Максимальное количество видимых снежинок
-		snowStorm.followMouse = true; // true - гоняться за курсором, false - нет
-		snowStorm.snowCharacter = "&bull;"; // Вид снежинки
-
-	};
-
-</script>
-
+<div class="snowContainer">
+	
+	<div id="snow"></div>
+	
+</div>
   </body>
 </html>
