--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 	window.onload = function() {
 
 		snowStorm.snowColor = "#fff"; // Цвет снежинок
-		snowStorm.flakesMaxActive = 100; // Максимальное количество видимых снежинок
+		snowStorm.flakesMaxActive = 150; // Максимальное количество видимых снежинок
 		snowStorm.followMouse = true; // true - гоняться за курсором, false - нет
-		snowStorm.snowCharacter = "&bull;"; // Вид снежинки
+		snowStorm.snowCharacter = "&#10052;"; // Вид снежинки
 
 	};
 
