--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
-  	    <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width">
   <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
@@ -17,11 +17,11 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "Dz6a",
-		"url": "index.html",
-		"logo": "images/logo.jpg"
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Dz6a",
+    "url": "index.html",
+    "logo": "images/logo.jpg"
 }</script>
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
@@ -72,10 +72,10 @@
           <span class="u-text-body-alt-color">задания <br>6а</span>
         </h1>
          <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">ТФТЛ</h6>
-	<br>
-	<br>
-	<center>
-		  	<h5><a href="#" class="nb">Перейти в блог класса</a></h5>
+  <br>
+  <br>
+  <center>
+        <h5><a href="#" class="nb">Перейти в блог класса</a></h5>
      <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
 </center>
         <h3 class="u-align-center nb ">Отзывы </h3>
@@ -85,8 +85,8 @@
       <h6 class="nb" >ОООООООЕЧНЬ рад что сайт обновил дизайн, глазам приятно стало.
 Пожелания: добавить классные работы,добавить приложения на IOS и windows,Linux</h6>
           <h5 class="nb" >Админ<h5>
-            	      <h6 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h6>
-            	</center>
+                    <h6 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h6>
+              </center>
 </div>
     </section>
     <section class="u-clearfix u-gradient u-section-2" id="sec-d1d5">
@@ -99,6 +99,8 @@
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
+
+    <script>
  // количество снежинок, которое будет на экране одновременно.
 let snowmax=40
  
@@ -188,5 +190,6 @@ for (i=0;i<=snowmax;i++) {
     document.body.insertAdjacentHTML('beforeend', "<span id='s"+i+"' style='user-select:none;position:fixed;top:-"+snowmaxsize+"'>"+snowletter+"</span>")
 }
 window.onload=initsnow  
+</script>>
   </body>
 </html>
