--- a/dz.html
+++ b/dz.html
@@ -69,11 +69,10 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	     <h5> <a href="1 декабря.html" class="nb">Дз на 1 декабря Изо, Русский </a></h5> 
      <h5> <a href="30 ноября.html" class="nb">Дз на 30 ноября Математика, История, Русский, Английский </a></h5> 
 	     <h5> <a href="29 ноября.html" class="nb">Дз на 29 ноября Математика, География, Литература </a></h5> 
-	<h5> <a href="27 ноября.html" class="nb">Дз на 27 ноября Музыка, Биология </a></h5> 
-<h5> <a href="26 ноября.html" class="nb">Дз на 26 ноября Литература, Русский, История, Обществознание </a></h5> 
-   	   	   	   
+	
 	       <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>
 	      
  <h2><a href="gdz.html" style="color:#5088C5; font-size: 30px ;"  >underground</a></h2>
