--- a/1 декабря.html
+++ b/1 декабря.html
@@ -71,7 +71,7 @@
      <center>
 	
     <h3>Русский</h3>
-  <h4></h4>
+  <h4>Учить все что было на уроке </h4>
       <h3>ИЗО</h3>
   <h4>Дорисовать рисунок и пренисти</h4>
 
