--- a/gdz.html
+++ b/gdz.html
@@ -75,16 +75,15 @@ width: 340px;
 </style>
 <center>
 	
-   <h4>Математика 30 ноября </h4>
-<img src="30матем1.jpg"  >
-	<img src="30матем2.jpg">
-		<img src="30матем3.jpg" >
-<h4>Русский 30 ноября</h4>
-<img src="30рус1.jpg">
+   <h4></h4>
+<img src=".jpg"  >
 	
-    <h4>Английский 1 гр. 30 ноября</h4>
-<img src="англ301.jpg">
-	<img src="англ302.jpg">
+<h4></h4>
+<img src=".jpg">
+	
+    <h4></h4>
+<img src=".jpg">
+	<img src=".jpg">
 <h4></h4>
 <img src=".jpg">
 	<img src=".jpg">
