--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -70,7 +70,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
           <center>
         <h3 class="nb" style="font-size: 22px" >Ближайшие Контрольные </h3><br>
-          <h4 class="nb">Биология 27 ноября<br>Тема:весь раздел</h4>
+          <h4 class="nb">Русский 1 декабря</h4>
   </center>
     
       </div>
