--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
   </head>
   <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body u-overlap" class="cont" ><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
-       
+       <script src="//megatimer.ru/get/91b0352b94273563bedf3ba82e15efd0.js"></script>
         <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
