--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <br>
   <br>
   <center>
+    <script src="https//megatimer.ru/get/91b0352b94273563bedf3ba82e15efd0.js"></script>
         <h5><a href="#" class="nb">Перейти в блог класса</a></h5>
      <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
 </center>
