--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
   <br>
   <br>
   <center>
+  	
         <h5><a href="#" class="nb">Перейти в блог класса</a></h5>
      <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
+     <h4>До нового года осталось:<h4>
+     <script type="text/javascript"  >
+(function () {var _id = "8206a6a224602ffae1c2b82c13172bf5"; while (document.getElementById ("timer" + _ id)) _ id = _id + "0"; document.write ("<div id = 'timer" + _ id + "' style = 'min-width: 390px; height: 96px;'> </div> "); var _t = document.createElement (" script "); _ t.src =" // megatimer.ru/timer/timer.min.js ? v = 1 "; var _f = function (_k) {var l = new MegaTimer (_id, {" view ": [1,1,1,1]," type ": {" currentType ":" 1 ", "params": {"usertime": false, "tz": "7", "utc": 1640970000000}}, "design": {"type": "circle", "params": {"width": " 5 "," radius ":" 42 "," line ":" solid "," line-color ":" # 3c78d8 "," background ":"solid", "background-color": "# 9900ff", "direction": "direct", "number-font-family": {"family": "Open Sans", "link": "<link href = '//fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel = 'stylesheet' type = 'text / css'> "}," number-font-size ":" 31 "," number-font-color ":" # ffffff "," separator-margin ":" 0 "," separator-on ": false," separator-text ":": "," text-on ": true," текст -font-family ": {" family ":" Open Sans "," link ":" <link href = '// fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel = 'таблица стилей 'type =' text / css '> "},"text-font-size ":" 16 "," text-font-color ":" # ffffff "}}," designId ": 7," theme ":" black "," width ": 390," height ": 96}); if (_k! = Null) l.run ();}; _ t.onload = _f; _t.onreadystatechange = function () {if (_t.readyState == "loaded") _ f (1);} ; var _h = document.head || document.getElementsByTagName ("head") [0]; _ h.appendChild (_t);}). call (this);
+</script>
 </center>
 
         <h3 class="u-align-center nb ">Отзывы </h3>
