--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
   <br>
   <center>
   	
-        <h5><a href="#" class="nb">Перейти в блог класса</a></h5>
+        <h5><a href="https://dz6ablog.blogspot.com/?m=1" class="nb">Перейти в блог класса</a></h5>
      <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
      <h4 class="nb" >До нового года осталось:<h4>
+     	<img src="https://1.bp.blogspot.com/-28JelGun4wU/WiMzq30xc9I/AAAAAAAAAMM/F-I-QJdxP-AXQ5TCDLibBddPQ28ZXpbdgCLcBGAs/s1600/christmas-2846337_200x255.jpg" height="40%" ><br><br>
 <script src="//megatimer.ru/get/b476faa71264abca06f13d3de09ad455.js"></script>
+
 </center>
 
 
