--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 Пожелания: добавить классные работы,добавить приложения на IOS и windows,Linux</h6>
           <h5 class="nb" >Админ<h5>
                     <h6 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h6>
-              </center>
+                     <br>
+              	  <br>  <br>  <br>  <br>  <br>  <br>  <br>
+              <h1>	<a href="nol.html">  <br>  <br>  <br></h1></a>
+  </center>
 </div>
     </section>
     <section class="u-clearfix u-gradient u-section-2" id="sec-d1d5">
