--- a/Главная.html
+++ b/Главная.html
@@ -93,8 +93,8 @@
           <h5 class="nb" >Админ<h5>
             	      <h6 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h6>
               <br>
-              	  <br>  <br>  <br>  <br>  <br>  <br>  <br>
-              <h1>	<a href="nol.html">  <br>  <br>  <br></h1></a>
+              <br>  <br>  <br>  <br>
+              <h1>	<a href="nol.html">game </h1></a>
             	</center>
  </div>
     </section>
