--- a/nol.html
+++ b/nol.html
@@ -1,20 +1,380 @@
-<!DOCTYPE html>
-<html lang="ru">
- <head>
-   <script class="u-script" type="text/javascript" src="nol.js" defer=""></script>
+<html lang="ru" >
+<head>
+  <meta charset="UTF-8">
+    <script class="u-script" type="text/javascript" src="общие.js" defer=""></script>
+     <script class="u-script" type="text/javascript" src="nol.js" defer=""></script>
 <meta charset="utf-8">
   <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     	    <meta name="viewport" content="width=device-width">
 <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
-    <link rel="stylesheet" href="общие.css" media="screen">
-<link rel="stylesheet" href="Главная.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="общие.js" defer=""></script>
+
     <link rel="icon" href="images/favicon1.ico">
+
+
 </head>
-<body class="u-body u-overlap" class="cont" >
+
+<body>
+	<h2>Крестики Нолики для одного</h2>
+	<div id="game">
+		<div class="table">
+			<table cellpadding="0" cellspacing="0">
+				<tr>
+					<td>
+						<div class="inner"></div>
+					</td>
+					<td>
+						<div class="inner"></div>
+					</td>
+					<td>
+						<div class="inner"></div>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="inner"></div>
+					</td>
+					<td>
+						<div class="inner"></div>
+					</td>
+					<td>
+						<div class="inner"></div>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="inner"></div>
+					</td>
+					<td>
+						<div class="inner"></div>
+					</td>
+					<td>
+						<div class="inner"></div>
+					</td>
+				</tr>
+			</table>
+			<div class="winning"></div>
+		</div>
+		<div id="win_block">
+			<span class="winner"></span>
+			<span class="again">Играть еще!</span>
+		</div>
+	</div>
+<style>
+	h2 {
+	text-align: center;
+}
+.inner {
+	width: 50px;
+	height: 50px;
+	font-size: 20px;
+	line-height: 50px;
+	text-align: center;
+	text-transform: uppercase;
+	border: 1px solid #333;
+	margin: 5px;
+	cursor: pointer;
+
+	box-shadow: 3px 4px 1px 2px rgba(1,1,1, 0.1);
+	text-shadow: 2px 3px  1px rgba(1,1,1, 0.3);
+	user-select: none;
+}
+table {
+	/*margin: 0 auto;*/
+}
+
+#win_block {
+	display: none;
+	text-align: center;
+	padding-top: 20px;
+	font-size: 20px;
+}
+#win_block .again{
+	font-weight: bold;
+	cursor: pointer;
+	color: #369;
+	border-bottom: 1px solid #369;
+}
+#win_block .again:hover{
+	border-color: transparent;
+	
+}
+
+
+#game {
+	position: relative;
+}
+#game .table{
+	/*border: 1px solid red;*/
+	display: table;
+	
+	margin: 0 auto;
+	position: relative;
+}
+#game .table .winning{
+	display: none;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,200,0, 0.5);
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+#game table tr:first-child div {
+	margin-top: 0;
+}
+#game table tr:last-child div {
+	margin-bottom: 0;
+}
+#game table tr td:first-child div {
+	margin-left: 0;
+}
+#game table tr td:last-child div {
+	margin-right: 0;
+}
+</style>
+<script>
+	// Math.floor(Math.random()*3)
+
+
+var arr, arr_events = [], win_block, winner, again, winning, game;
+
+var comp_sym = "o";
+var user_sym = "x";
+
+onload = function(){
+	game = document.getElementById("game");
+	arr = game.getElementsByClassName("inner");
+	win_block = document.getElementById("win_block");
+	win_text = win_block.getElementsByClassName("winner")[0];
+	again = win_block.getElementsByClassName("again")[0];
+	winning = game.getElementsByClassName("winning")[0];
+
+	again.onclick = function(){
+		winning.style.display = "none";
+		win_block.style.display = "none";
+		clearTable();
+		randomMove();
+	};
+
+	for(var i = 0; i < arr.length; i++){
+		arr[i].onclick = function(){
+			drawSym(this);
+		};
+
+		/* тут хотел использовать addEven.. и потом убрать его, когда определился победитель */
+	}
+	randomMove();
+
+};
+
+function randomMove(){
+	var rnd = getRandomInt(2);
+	console.log(rnd);
+	if (rnd == 1) {
+		autoDrawing();
+	}
+	return true;
+}
+
+function drawSym(item, sym = user_sym){
+	// console.log(item);
+	if (item.hasChildNodes()) return false;
+	item.innerHTML = sym;
+	
+	var winner = checkWinner();
+
+	if (sym == user_sym && !winner)
+		autoDrawing();
+
+
+	if (winner == user_sym) {
+		win_text.innerHTML = "Вы выиграли!";
+		win_text.style.color = "green";
+		winning.style.backgroundColor = "rgba(0,200,0, 0.5)";
+	}else if (winner == comp_sym) {
+		win_text.innerHTML = "Выиграл компьютер! Попоробуйте еще раз!";
+		win_text.style.color = "red";
+		winning.style.backgroundColor = "rgba(200,0,0, 0.5)";
+	}
+	if (winner) {
+		winning.style.display = "block";
+		win_block.style.display = "block";
+	}
+	return true;
+}
+
+function checkWinner(){
+	var winner = "";
+	var j = 0;
+
+
+	var xy_1_1 = arr[0].innerHTML;
+	var xy_1_2 = arr[4].innerHTML;
+	var xy_1_3 = arr[8].innerHTML;
+
+	var xy_2_1 = arr[2].innerHTML;
+	var xy_2_2 = arr[4].innerHTML;
+	var xy_2_3 = arr[6].innerHTML;
+
+	if ((xy_1_1 && xy_1_2 && xy_1_3) || (xy_2_1 && xy_2_2 && xy_2_3)) {
+
+		if (xy_1_1 == user_sym && xy_1_2 == user_sym && xy_1_3 == user_sym) {
+			winner = user_sym;
+		}
+		else if(xy_1_1 == comp_sym && xy_1_2 == comp_sym && xy_1_3 == comp_sym){
+			winner = comp_sym;
+		}
+
+
+		if (xy_2_1 == user_sym && xy_2_2 == user_sym && xy_2_3 == user_sym) {
+			winner = user_sym;
+		}
+		else if(xy_2_1 == comp_sym && xy_2_2 == comp_sym && xy_2_3 == comp_sym){
+			winner = comp_sym;
+		}
+	}
+
+
+
+
+	if (!winner){
+		for(var i = 0; i < 3; i++){
+
+			// alert(i);
+
+			var a1 = arr[i].innerHTML;
+			var a2 = arr[i + 3].innerHTML;
+			var a3 = arr[i + 6].innerHTML;
+
+			var b1 = arr[i].innerHTML;
+			var b2 = arr[i + 1].innerHTML;
+			var b3 = arr[i + 2].innerHTML;
+			
+
+			// console.log("b1 = '" + (b1) + "' b2 = '" + (b2) + "' b3 = '" + (b3) +"'");
+
+			if (a1 == user_sym && a2 == user_sym && a3 == user_sym) {
+				winner = user_sym;
+				break;
+			}
+			else if(a1 == comp_sym && a2 == comp_sym && a3 == comp_sym){
+				winner = comp_sym;
+				break;
+			}
+
+
+			if (i != 0) j = 3*i;
+
+			b1 = arr[j].innerHTML;
+			b2 = arr[j + 1].innerHTML;
+			b3 = arr[j + 2].innerHTML;
+
+			if (b1 == user_sym && b2 == user_sym && b3 == user_sym) {
+				winner = user_sym;
+				break;
+			}
+			else if(b1 == comp_sym && b2 == comp_sym && b3 == comp_sym){
+				winner = comp_sym;
+				break;
+			}
+			if (winner) 
+				break;
+		}
+	}
+
+	return winner;
+}
+
+function autoDrawing(){
+
+	if (!ckeckFreeSpace()) {
+		
+		win_text.innerHTML = "Выиграла ничья! ";
+		win_text.style.color = "blue";
+		winning.style.display = "block";
+		winning.style.backgroundColor = "rgba(0,0,200, 0.5)";
+		win_block.style.display = "block";
+
+		return false;
+	}
+	var el, rnd;
+
+	do{
+		rnd = getRandomInt(arr.length);
+		el = arr[rnd];
+		// console.log(rnd);
+	}while(!drawSym(el, comp_sym));
+
+	if (!ckeckFreeSpace()) {
+		autoDrawing();
+	}
+}
+
+function clearTable(){
+	for(var i = 0; i < arr.length; i++){
+		arr[i].innerHTML =  "";
+	}
+}
+
+function ckeckFreeSpace(){
+	var res = false;
+
+	for(var i = 0; i < arr.length; i++){
+		if (arr[i].hasChildNodes()){
+			res = false;
+		}else{
+			res = true;
+			break;
+		}
+	}
+
+	return res;
+}
+
+function getRandomInt(max){
+	return Math.floor(Math.random() * max);
+}
+
+
+
+
+
+
+
+function addHandler(el, ev, func ){
+	try{
+		el.addEventListener(ev, func, false);
+	}
+	catch(e){
+		el.attachEvent("on"+ev, func);
+	}
+}
+
+
+function removerEvent(el, ev, func){
+	try{
+		el.removeEventListener(ev, func, false);
+
+	}catch(x){
+		el.detachEvent("on"+ev, func);
+		
+	}
+}
+	</script>
+
+
+					
+
+
+
+
+
+
+
 	<center>
 <h3>Крестики Нолики для двоих</h3>
 <div id="wrapper">
