--- a/gdz.html
+++ b/gdz.html
@@ -75,10 +75,14 @@ width: 340px;
 </style>
 <center>
 	
-   <h4></h4>
-<img src=".jpg"  >
+   <h4>Математика 2 декабря</h4>
+<img src="130.jpg" ><br>
+	<img src="230.jpg" ><br> 
+<img src="330.jpg" ><br>
+<img src="430.jpg"  ><br>
+<img src="530.jpg"  >
 	
-<h4></h4>
+<h4>Английский 1 группа</h4>
 <img src=".jpg">
 	
     <h4></h4>
