--- a/gdz.html
+++ b/gdz.html
@@ -76,11 +76,11 @@ width: 340px;
 <center>
 	
    <h4>Математика 2 декабря</h4>
-<img src="130.jpg" ><br>
-	<img src="230.jpg" ><br> 
-<img src="330.jpg" ><br>
-<img src="430.jpg"  ><br>
-<img src="530.jpg"  >
+<img src="130м.jpg" ><br>
+	<img src="230м.jpg" ><br> 
+<img src="330м.jpg" ><br>
+<img src="430м.jpg"  ><br>
+<img src="530м.jpg"  >
 	
 <h4>Английский 1 группа</h4>
 <img src=".jpg">
