--- a/2 декабря.html
+++ b/2 декабря.html
@@ -73,9 +73,9 @@
     <h3>Литература</h3>
   <h4>СТР. 163-164, прочитать. Проверь себя, вопрос 1. Стр. 165, выразительное чтение.</h4>
       <h3>Английский 1 группа</h3>
-  <h4></h4>
+  <h4>S.b p. 37 ex. 9</h4>
         <h3>Математика</h3>
-  <h4>436, 439, 441, 443, 444. П. 14. конспект. правила выучит.ь</h4>
+  <h4>436, 439, 441, 443, 444. П. 14. конспект. правила по геометрии выучить</h4>
 
 
    
