--- a/gdz.html
+++ b/gdz.html
@@ -82,7 +82,7 @@ width: 340px;
 <img src="430м.jpg"  ><br>
 <img src="530м.jpg"  >
 	
-<h4>Английский 1 группа</h4>
+<h4>Литература </h4>
 <img src=".jpg">
 	
     <h4></h4>
