--- a/gdz.html
+++ b/gdz.html
@@ -69,28 +69,28 @@
     <section class="u-clearfix u-gradient u-section-1" id="sec-db88">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
 <style>
-img {
-width: 340px;
+.gdzim {
+max-width: 340px;
 } 
 </style>
 <center>
 	
    <h4>Математика 2 декабря</h4>
-<img src="130м.jpg" ><br>
-	<img src="230м.jpg" ><br> 
-<img src="330м.jpg" ><br>
-<img src="430м.jpg"  ><br>
-<img src="530м.jpg"  >
+<img src="130м.jpg" class="gdzim" ><br>
+	<img src="230м.jpg"  class="gdzim"><br> 
+<img src="330м.jpg"  class="gdzim"><br>
+<img src="430м.jpg"  class="gdzim" class="gdzim" ><br>
+<img src="530м.jpg"  class="gdzim" >
 	
 <h4>Литература </h4>
-<img src=".jpg">
+<img src=".jpg"  class="gdzim">
 	
     <h4></h4>
-<img src=".jpg">
-	<img src=".jpg">
+<img src=".jpg"  class="gdzim">
+	<img src=".jpg"  class="gdzim">
 <h4></h4>
-<img src=".jpg">
-	<img src=".jpg">
+<img src=".jpg"  class="gdzim">
+	<img src=".jpg"  class="gdzim">
 
 
  </center>
