--- a/gdz.html
+++ b/gdz.html
@@ -73,11 +73,11 @@
 <center>
 	
    <h4>Математика 2 декабря</h4>
-<img src="130м.jpg" class="gdzim" ><br>
-	<img src="230м.jpg"  class="gdzim"><br> 
-<img src="330м.jpg"  class="gdzim"><br>
-<img src="430м.jpg"  class="gdzim" class="gdzim" ><br>
-<img src="530м.jpg"  class="gdzim" >
+<img src="130м.jpg"  ><br>
+	<img src="230м.jpg" ><br> 
+<img src="330м.jpg"  ><br>
+<img src="430м.jpg"   ><br>
+<img src="530м.jpg"  >
 	
 <h4>Литература </h4>
 <img src=".jpg"  class="gdzim">
