--- a/gdz.html
+++ b/gdz.html
@@ -68,16 +68,20 @@
       </div></header>
     <section class="u-clearfix u-gradient u-section-1" id="sec-db88">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-
-
+	      <style>
+.gdzim {
+    width: 100%;
+    height: auto;
+}
+</style>
 <center>
 	
    <h4>Математика 2 декабря</h4>
-<img src="130м.jpg"  ><br>
-	<img src="230м.jpg" ><br> 
-<img src="330м.jpg"  ><br>
-<img src="430м.jpg"   ><br>
-<img src="530м.jpg"  >
+<img src="130м.jpg" class="gdzim" ><br>
+	<img src="230м.jpg"class="gdzim"><br> 
+<img src="330м.jpg" class="gdzim" ><br>
+<img src="430м.jpg" class="gdzim" ><br>
+<img src="530м.jpg" class="gdzim">
 	
 <h4>Литература </h4>
 <img src=".jpg"  class="gdzim">
