--- a/gdz.html
+++ b/gdz.html
@@ -72,21 +72,21 @@
 <center>
 	
    <h4>Математика 2 декабря</h4>
-<img src="130м.jpg" class="gdzim" ><br>
-	<img src="230м.jpg"class="gdzim"><br> 
-<img src="330м.jpg" class="gdzim" ><br>
-<img src="430м.jpg" class="gdzim" ><br>
-<img src="530м.jpg" class="gdzim">
+<img src="130м.jpg" class="image" ><br>
+	<img src="230м.jpg"class="image"><br> 
+<img src="330м.jpg" class="image" ><br>
+<img src="430м.jpg" class="image" ><br>
+<img src="530м.jpg" class="image">
 	
 <h4>Литература </h4>
-<img src=".jpg"  class="gdzim">
+<img src=".jpg"  class="image">
 	
     <h4></h4>
-<img src=".jpg"  class="gdzim">
-	<img src=".jpg"  class="gdzim">
+<img src=".jpg"  class="image">
+	<img src=".jpg"  class="image">
 <h4></h4>
-<img src=".jpg"  class="gdzim">
-	<img src=".jpg"  class="gdzim">
+<img src=".jpg" class="image">
+	<img src=".jpg" class="image">
 
 
  </center>
