--- a/dz.html
+++ b/dz.html
@@ -69,6 +69,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	   	   	     <h5> <a href="3 декабря.html" class="nb">Дз на 3 декабря Литература, Обществознание, Русский </a></h5> 
    	   	     <h5> <a href="2 декабря.html" class="nb">Дз на 2 декабря Математика, Английский, Литература </a></h5> 
    	     <h5> <a href="1 декабря.html" class="nb">Дз на 1 декабря Изо, Русский </a></h5> 
      <h5> <a href="30 ноября.html" class="nb">Дз на 30 ноября Математика, История, Русский, Английский </a></h5> 
