--- a/3 декабря.html
+++ b/3 декабря.html
@@ -73,7 +73,7 @@
     <h3>Литература</h3>
   <h4>учить любой из трех стихов</h4>
       <h3>Обществознание </h3>
-  <h4>параграф 4 задания устно</h4>
+  <h4>параграф 5 читать</h4>
         <h3>Русский</h3>
   <h4>Все учить</h4>
 
