--- a/4 декабря.html
+++ b/4 декабря.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html style="font-size: 16px;" lang="ru-RU">
   <head>
 
@@ -6,8 +6,8 @@
    <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    		    <meta name="viewport" content="width=device-width"> 
-    <title>Dz6a тфтл</title>
+    	    <meta name="viewport" content="width=device-width">
+<title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="dz.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -68,27 +68,22 @@
       </div></header>
     <section class="u-clearfix u-gradient u-section-1" id="sec-db88">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-	    
-<center>
+     <center>
 	
-   <h4></h4>
-<img src=".jpg" class="image" ><br>
-	<img src=".jpg"class="image"><br> 
+    <h3>Русский</h3>
+  <h4>учить слова, 284</h4>
+      <h3>Биология</h3>
+  <h4>Учебник стр.150-153 читать, ? устно, термины с определениями учить. Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/sposoby-razmnozheniya-rasteniy" >ссылка</a></h4>
+        <h3>Музыка </h3>
+  <h4>Готовиться к контрольной</h4>
 
 
-<h4> </h4>
-<img src=".jpg"  class="image">
-	
-    <h4></h4>
-<img src=".jpg"  class="image">
-	<img src=".jpg"  class="image">
-<h4></h4>
-<img src=".jpg" class="image">
-	<img src=".jpg" class="image">
+   
+	 
 
-
- </center>
-	
+   
+	 
+	 </center>
       </div>
     </section>
     <section class="u-clearfix u-gradient u-section-2" id="sec-8383">
