--- a/6 декабря.html
+++ b/6 декабря.html
@@ -81,7 +81,7 @@
 <h3>Английский 1 группа</h3>
   <h4>W.b p. ex. </h4>
         <h3>Физика</h3>
-  <h4>Найти интересные факты о ипарении</h4>
+  <h4>Найти интересные факты о испарении</h4>
 
 
    
