--- a/6 декабря.html
+++ b/6 декабря.html
@@ -73,7 +73,7 @@
     <h3>Русский</h3>
   <h4>290</h4>
       <h3>Литература</h3>
-  <h4>СТР. 171-172, прочитать. Проверь себя.</h4>
+  <h4>СТР. 171-172, прочитать. Проверь себя. И подготовиться к сочинению </h4>
       <h3>Математика</h3>
   <h4></h4>
         <h3>География</h3>
