--- a/6 декабря.html
+++ b/6 декабря.html
@@ -75,7 +75,7 @@
       <h3>Литература</h3>
   <h4>СТР. 171-172, прочитать. Проверь себя. И подготовиться к сочинению </h4>
       <h3>Математика</h3>
-  <h4></h4>
+  <h4>447 449 451 олимпиада</h4>
         <h3>География</h3>
   <h4></h4>
 <h3>Английский 1 группа</h3>
