--- a/6 декабря.html
+++ b/6 декабря.html
@@ -77,7 +77,7 @@
       <h3>Математика</h3>
   <h4>447 449 451 олимпиада</h4>
         <h3>География</h3>
-  <h4></h4>
+  <h4>Готовиться к диктанту по терминам</h4>
 <h3>Английский 1 группа</h3>
   <h4>W.b. p. 24 ex. 1 </h4>
         <h3>Физика</h3>
