--- a/dz.html
+++ b/dz.html
@@ -83,6 +83,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	   	   		   	     <h5> <a href="7 декабря.html" class="nb">Дз на 7 декабря Математика, Английский, Русский</a></h5> 
    	   		   	     <h5> <a href="6 декабря.html" class="nb">Дз на 6 декабря География, Математика, Литература, Английский, Физика </a></h5> 
    		   	     <h5> <a href="4 декабря.html" class="nb">Дз на 4 декабря Музыка, Русский, Биология</a></h5> 
    	   	   	     <h5> <a href="3 декабря.html" class="nb">Дз на 3 декабря Литература, Обществознание, Русский </a></h5> 
