--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <br><span class="u-text-body-alt-color" >Домашние </span>
           <span class="u-text-body-alt-color">задания <br>6а</span>
         </h1>
-         <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" style="font-size: 12px">ТФТЛ</h6>
+         <h6 class="u-align-center u-text u-text-body-alt-color u-text-2"style="font-size: 12px">ТФТЛ</h6>
   <br>
   <br>
   	
