--- a/Главная.html
+++ b/Главная.html
@@ -81,11 +81,11 @@
       </div></header>
     <section class="u-align-left u-clearfix u-gradient u-section-1" id="sec-9707">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1" class="nb" >
-           <h1 class="u-align-center u-text u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" style="font-size: 26px">
+           <h1 class="u-align-center u-text u-text-1" style="font-size: 26px">
           <br><span class="u-text-body-alt-color" >Домашние </span>
           <span class="u-text-body-alt-color">задания <br>6а</span>
         </h1>
-         <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" style="font-size: 12px">ТФТЛ</h6>
+         <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" style="font-size: 12px">ТФТЛ</h6>
   <br>
   <br>
   <center>
