--- a/10 декабря.html
+++ b/10 декабря.html
@@ -71,7 +71,7 @@
      <center>
 	
     <h3>Обществознание </h3>
-  <h4>Гтовиться к контрольной прорешать тест</h4>
+  <h4>Гтовиться к контрольной прорешать тест: <a href="https://edu.skysmart.ru/student/foferagexu" >ссылка</a></h4>
       <h3>Литература </h3>
   <h4>с.180 вопрос. 8</h4>
         <h3>Русский</h3>
