--- a/10 декабря.html
+++ b/10 декабря.html
@@ -76,6 +76,8 @@
   <h4>с.180 вопрос. 8</h4>
         <h3>Русский</h3>
   <h4>299</h4>
+          <h3>История</h3>
+  <h4>Чтение параграфа 21, ответы на вопросы в конце параграфа</h4>
 
 
    
