--- a/dz.html
+++ b/dz.html
@@ -84,6 +84,7 @@
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
    	 	     <h5> <a href="10 декабря.html" class="nb">Дз на 10 декабря Русский,Обществознание, Литература, История </a></h5> 
+      	 	     <h5> <a href="13 декабря.html" class="nb">Дз на 13 декабря Математика</a></h5> 
    	   	   	   		   	     <h5> <a href="9 декабря.html" class="nb">Дз на 9 декабря Математика, Английский, Литература </a></h5> 
    	   	     <h5> <a href="8 декабря.html" class="nb">Дз на 8 декабря Геометрия, Русский</a></h5> 
    	   	   		   	     <h5> <a href="7 декабря.html" class="nb">Дз на 7 декабря Математика, Английский, Русский</a></h5> 
