--- a/13 декабря.html
+++ b/13 декабря.html
@@ -72,6 +72,10 @@
 	
     <h3>Математика </h3>
   <h4>489,492,494-496,500,502,511,514,520,524,529</h4>
+          <h3>Английский 1 группа</h3>
+  <h4>W.b p. </h4>
+     <h3>География</h3>
+  <h4>параграф 43, знать термины. Р.т. стр.36-37 №2,4-7.</h4>
       
 
    
