--- a/13 декабря.html
+++ b/13 декабря.html
@@ -73,11 +73,11 @@
     <h3>Математика </h3>
   <h4>489,492,494-496,500,502,511,514,520,524,529</h4>
           <h3>Английский 1 группа</h3>
-  <h4>W.b p. </h4>
+  <h4>W.b p. 26 ex. 2</h4>
      <h3>География</h3>
   <h4>параграф 43, знать термины. Р.т. стр.36-37 №2,4-7.</h4>
       <h3>Физика</h3>
-  <h4></h4>
+  <h4>Готовится к письменному опросу</h4>
         <h3>Литература</h3>
   <h4>СТР. 184-186,прочитать. Проверь себя, на вопросы ответить устно. СТР. 186-226, прочитать «Левша».</h4>
   
