--- a/13 декабря.html
+++ b/13 декабря.html
@@ -77,7 +77,7 @@
      <h3>География</h3>
   <h4>параграф 43, знать термины. Р.т. стр.36-37 №2,4-7.</h4>
       <h3>Физика</h3>
-  <h4>Готовится к письменному опросу</h4>
+  <h4>урок № 7(стр. 17 - 18)</h4>
         <h3>Литература</h3>
   <h4>СТР. 184-186,прочитать. Проверь себя, на вопросы ответить устно. СТР. 186-226, прочитать «Левша».</h4>
   
