--- a/14 декабря.html
+++ b/14 декабря.html
@@ -71,9 +71,9 @@
      <center>
 	
     <h3>Математика </h3>
-  <h4></h4>
+  <h4>531,532(обр. ходом), 533(2),541,543,545. §17,16 конспекты, ПРАВИЛА!!! </h4>
           <h3>Английский 1 группа</h3>
-  <h4></h4>
+  <h4>W.b p. 27 ex. 1,2</h4>
      <h3>История</h3>
   <h4>Подговка к тестированию по темам: Столетняя война (п.15) и Торжество королевкой власти (п.16) </h4>
       <h3>Русский</h3>
