--- a/dz.html
+++ b/dz.html
@@ -83,11 +83,9 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	      	 	     <h5> <a href="15 декабря.html" class="nb">Дз на 15 декабря Изо, Геометрия, Русский </a></h5> 
       	 	     <h5> <a href="14 декабря.html" class="nb">Дз на 14 декабря Математика, Английский, История, Русский </a></h5> 
       	 	     <h5> <a href="13 декабря.html" class="nb">Дз на 13 декабря Математика, Английский, Литература, Физика, География</a></h5> 
-      	 	     <h5> <a href="11 декабря.html" class="nb">Дз на 11 декабря Русский,Биология </a></h5>  
-   	   	   	   		   	     <h5> <a href="9 декабря.html" class="nb">Дз на 9 декабря Математика, Английский, Литература </a></h5> 
-   	   	     <h5> <a href="8 декабря.html" class="nb">Дз на 8 декабря Геометрия, Русский</a></h5> 
 
 
 	       <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>
