--- a/dz.html
+++ b/dz.html
@@ -83,10 +83,11 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	      	 	     <h5> <a href="17 декабря.html" class="nb">Дз на 17 декабря Обществознание, Литература, История </a></h5> 
    	   	      	 	     <h5> <a href="16 декабря.html" class="nb">Дз на 16 декабря Математика, Английский, Литература </a></h5> 
    	      	 	     <h5> <a href="15 декабря.html" class="nb">Дз на 15 декабря Изо, Геометрия, Русский </a></h5> 
       	 	     <h5> <a href="14 декабря.html" class="nb">Дз на 14 декабря Математика, Английский, История, Русский </a></h5> 
-      	 	     <h5> <a href="13 декабря.html" class="nb">Дз на 13 декабря Математика, Английский, Литература, Физика, География</a></h5> 
+
 
 
 	       <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>
