--- a/20 декабря.html
+++ b/20 декабря.html
@@ -79,7 +79,7 @@
       <h3>Физика</h3>
   <h4>графики; определения; основные понятия (опрос)</h4>
         <h3>География</h3>
-  <h4></h4>
+  <h4>К.к с. 12-13 ном. 1,2</h4>
   
 
 
